# financiall

./: .gitignore  AGENTS.md  IMPLEMENT.md  README.md  pyproject.toml
.specify/: feature.json  init-options.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
core/: GUARDRAILS.md  HARNESS_CHECKLIST.md  PROFILE.md  README.md
infra/: Caddyfile  financiall-dev.service  financiall.service  setup-raspberry-pi.sh
specs/001-importar-nfce/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-excluir-nota-fiscal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-categorias-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-importar-historico-financeiro/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-graficos-resumo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-revisao-visual-layout/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-leitura-qrcode-camera/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-categorizacao-itens/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-relatorios-mensais/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-importar-extrato-bancario/: data-model.md  (+5 more)
src/: main.py
tests/: conftest.py  helpers.py
(+142 files in other folders)
