[project]
name = "financiall"
version = "0.1.0"
description = "financiALL - base unica de financas pessoais (feature 001: importar notas fiscais)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "requests>=2.31",
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pdf2image>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
